[package]
name = "pythagorean-hodographs"
version = "0.1.0"
authors = ["Matthew Cramerus <suremarc.pm@gmail.com>"]
edition = "2021"
description = "Pythaogrean hodograph splines"
documentation = "https://docs.rs/pythagorean-hodographs"
readme = "README.md"
homepage = "https://github.com/suremarc/pythagorean-hodographs"
repository = "https://github.com/suremarc/pythagorean-hodographs"
license = "MIT OR Apache-2.0"
keywords = ["math", "geometry", "spline", "interpolation", "number"]
categories = ["mathematics"]

[dependencies]
glam = "0.22.0"
itertools = "0.10.5"
ordered-float = "3.4.0"
