[package]
name = "pythagorean-hodographs"
version = "0.3.2"
authors = ["Matthew Cramerus <suremarc.pm@gmail.com>"]
edition = "2021"
description = "Pythaogrean hodograph splines"
documentation = "https://docs.rs/pythagorean-hodographs"
readme = "README.md"
homepage = "https://github.com/suremarc/pythagorean-hodographs"
repository = "https://github.com/suremarc/pythagorean-hodographs"
license = "MIT OR Apache-2.0"
keywords = ["math", "geometry", "spline", "interpolation", "number"]
categories = ["mathematics"]

[dependencies]
glam = { version = "0.22.0", default-features = false }
itertools = { version = "0.10.5", default-features = false }
ordered-float = { version = "3.4.0", default-features = false }
num-traits = { version = "0.2.15", default-features = false }

[features]
default = ["std"]
std = ["glam/std", "itertools/use_std", "ordered-float/std"]
libm = ["glam/libm", "glam/num-traits"]

[dev-dependencies]
glam = { version = "0.22.0", features = ["rand"] }
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "spline"
harness = false
